--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.blend filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+*.psd filter=lfs diff=lfs merge=lfs -text
