--- a/portraits/Makefile
+++ b/portraits/Makefile
@@ -1,9 +1,11 @@
 RES := $(if $(HIDPI),400x300,200x150)
-OUTPUTS := $(patsubst %.xcf,out/%.png,$(shell find -name '*.xcf'))
+OUTDIR := ../out/portraits
+SOURCES := $(shell find -name '*.xcf')
+OUTPUTS := $(patsubst %.xcf,$(OUTDIR)/%.png,$(SOURCES))
 
 all: $(OUTPUTS)
 
-out/%.png: %.xcf
+$(OUTDIR)/%.png: %.xcf
 	@mkdir -p "$(dir $@)"
 	./xcf2png.sh "$<" "$@" $(RES)
 
