--- a/planet/exterior/Makefile
+++ b/planet/exterior/Makefile
@@ -1,5 +1,5 @@
 RES := $(if $(HIDPI),800x800,400x400)
-OUTDIR := ../out/exterior
+OUTDIR := ../../out/planet/exterior
 PNG_OUTPUTS := $(patsubst %.png,$(OUTDIR)/%.png,$(wildcard *.png))
 JPG_OUTPUTS := $(patsubst %.jpg,$(OUTDIR)/%.png,$(wildcard *.jpg))
 OUTPUTS := $(PNG_OUTPUTS) $(JPG_OUTPUTS)
@@ -15,8 +15,5 @@ $(OUTDIR)/%.png: %.jpg | $(OUTDIR)
 $(OUTDIR)/%.png: %.png | $(OUTDIR)
 	convert -scale $(RES) "$<" "$@"
 
-clean:
-	rm -f out/*
-
 .PHONY:
-	all clean
+	all
