--- a/2D/planet/exterior/Makefile
+++ b/2D/planet/exterior/Makefile
@@ -15,5 +15,4 @@ $(OUTDIR)/%.png: %.jpg | $(OUTDIR)
 $(OUTDIR)/%.png: %.png | $(OUTDIR)
 	convert -scale $(RES) "$<" "$@"
 
-.PHONY:
-	all
+.PHONY: all
