remove directory creation

--- a/logo/steam_assets/Makefile
+++ b/logo/steam_assets/Makefile
@@ -1,17 +1,12 @@
-OUTDIR := ../out/logo
-
 all: store soundtrack library
 
-store:
-	mkdir -p $(OUTDIR)
+restore:
 	$(MAKE) -C store
 
 soundtrack:
-	mkdir -p $(OUTDIR)
 	$(MAKE) -C soundtrack
 
 library:
-	mkdir -p $(OUTDIR)
 	$(MAKE) -C library
 
 .PHONY: store soundtrack library
