--- a/logo/Makefile
+++ b/logo/Makefile
@@ -2,9 +2,9 @@ OUTDIR := ./out
 LOGOS_OUTPUTS := $(patsubst %.svg,$(OUTDIR)/%.png,$(wildcard *.svg))
 OUTPUTS := $(LOGOS_OUTPUTS)
 
-all: logos steam
+all: loose steam
 
-logos: $(OUTPUTS)
+loose: $(OUTPUTS)
 
 $(OUTDIR):
 	mkdir -p $@
@@ -15,4 +15,4 @@ $(OUTDIR)/%.png: %.svg | $(OUTDIR)
 steam:
 	$(MAKE) -C steam_assets
 
-.PHONY: logos steam
+.PHONY: loose steam
