Fix inkscape so it generates correctly (works on Ubuntu 20.04)

--- a/logo/Makefile
+++ b/logo/Makefile
@@ -10,7 +10,7 @@ $(OUTDIR):
 	mkdir -p $@
 
 $(OUTDIR)/%.png: %.svg | $(OUTDIR)
-	inkscape --export-type="png" "$<" -o "$@"
+	inkscape -z "$<" -e "$@"
 
 steam:
 	$(MAKE) -C steam_assets
