Move the "mkspr" utility from the Naev repo.

--- a/3D/Makefile
+++ b/3D/Makefile
@@ -2,7 +2,7 @@
 
 RENDER      := "./render.py"
 RENDER_COMM := "./render_comm.py"
-MKSPR       := "$(HOME)/usr/prj/naev/mkspr"
+MKSPR       := "./mkspr"
 
 SPRITE_OBJS := $(patsubst %.blend,raw/%.png,$(wildcard ships/*.blend))
 COMM_OBJS   := $(patsubst %.blend,raw/%_comm.png,$(wildcard ships/*.blend))
@@ -11,7 +11,7 @@ COMM_OBJS   := $(patsubst %.blend,raw/%_comm.png,$(wildcard ships/*.blend))
 
 all: comm sprite
 
-raw/%.png: %.blend
+raw/%.png: %.blend mkspr
 	@echo -n "Rendering $< ... "
 	@blender "$<" -P $(RENDER) > /dev/null
 	@$(MKSPR)
@@ -30,6 +30,9 @@ comm: $(COMM_OBJS)
 
 sprite: $(SPRITE_OBJS)
 
+mkspr: mkspr.c
+	$(CC) `pkg-config --cflags --libs SDL2_image libpng` -DNOLOGPRINTFCONSOLE -o "$@" "$<"
+
 clean:
-	$(RM) $(COMM_OBJS) $(SPRITE_OBJS)
+	$(RM) $(COMM_OBJS) $(SPRITE_OBJS) $(MKSPR)
 
