Makefile seems ot work.

--- a/3D/Makefile
+++ b/3D/Makefile
@@ -5,11 +5,15 @@ RENDER_COMM := "./render_comm.py"
 MKSPR       := "./mkspr"
 
 SPRITE_OBJS := $(patsubst %.blend,raw/%.png,$(wildcard ships/*.blend))
+ENGINE_OBJS := $(patsubst %.blend,raw/%_engine.png,$(wildcard ships/*.blend))
 COMM_OBJS   := $(patsubst %.blend,raw/%_comm.png,$(wildcard ships/*.blend))
 
-.PHONY: all comm sprite
+.PHONY: all dirs comm sprite
 
-all: comm sprite
+all: dirs comm sprite engine
+
+dirs:
+	@mkdir -p raw/ships
 
 raw/%.png: %.blend mkspr
 	@echo -n "Rendering $< ... "
@@ -19,16 +23,26 @@ raw/%.png: %.blend mkspr
 	@echo "done!"
 	@rm *.png
 
+raw/%_engine.png: %.blend mkspr
+	@echo -n "Rendering $< ... "
+	@blender "$<" -P $(RENDER) -- --engine true > /dev/null
+	@$(MKSPR)
+	@cp "sprite.png"  "$@"
+	@echo "done!"
+	@rm *.png
+
 raw/%_comm.png: %.blend
 	@echo -n "Rendering $< ... "
-	@blender "$<" -P $(RENDER_COMM) > /dev/null
-	@cp "comm.png" "$@"
+	@blender "$<" -P $(RENDER) -- --comm 1 -x 1 -y 1 -r 255 > /dev/null
+	@cp "000.png" "$@"
 	@echo "comm done!"
 	@rm *.png
 
 comm: $(COMM_OBJS)
 
 sprite: $(SPRITE_OBJS)
+
+engine: $(ENGINE_OBJS)
 
 mkspr: mkspr.c
 	$(CC) `pkg-config --cflags --libs SDL2_image libpng` -DNOLOGPRINTFCONSOLE -o "$@" "$<"
