Let an environment variable, BLENDER, define the blender command. This helps if it should be "blender-2.7".

--- a/3D/Makefile
+++ b/3D/Makefile
@@ -1,5 +1,6 @@
 
 
+BLENDER     ?= "blender"
 RENDER      := "./render.py"
 RENDER_COMM := "./render_comm.py"
 MKSPR       := "./mkspr"
@@ -17,7 +18,7 @@ dirs:
 
 raw/%.png: %.blend mkspr
 	@echo -n "Rendering $< ... "
-	@blender --background "$<" -P $(RENDER) -x 8 -y 8 > /dev/null
+	@$(BLENDER) --background "$<" -P $(RENDER) -x 8 -y 8 > /dev/null
 	@$(MKSPR) 8 8
 	@cp "sprite.png"  "$@"
 	@echo "done!"
@@ -25,7 +26,7 @@ raw/%.png: %.blend mkspr
 
 raw/%_engine.png: %.blend mkspr
 	@echo -n "Rendering $< ... "
-	@blender --background "$<" -P $(RENDER) -- --engine true -x 8 -y 8 > /dev/null
+	@$(BLENDER) --background "$<" -P $(RENDER) -- --engine true -x 8 -y 8 > /dev/null
 	@$(MKSPR) 8 8
 	@cp "sprite.png"  "$@"
 	@echo "done!"
@@ -33,7 +34,7 @@ raw/%_engine.png: %.blend mkspr
 
 raw/%_comm.png: %.blend
 	@echo -n "Rendering $< ... "
-	@blender --background "$<" -P $(RENDER) -- --comm 1 -x 1 -y 1 -r 255 > /dev/null
+	@$(BLENDER) --background "$<" -P $(RENDER) -- --comm 1 -x 1 -y 1 -r 255 > /dev/null
 	@cp "000.png" "$@"
 	@echo "comm done!"
 	@rm *.png
