Crop faction logos to content before export.

--- a/2D/logo/Makefile
+++ b/2D/logo/Makefile
@@ -11,9 +11,9 @@ $(OUTDIR):
 	mkdir -p $@
 
 $(OUTDIR)/%_tiny.png: %.svg | $(OUTDIR)
-	inkscape -w $(RES_TINY) -h $(RES_TINY) "$<" -o "$@"
+	inkscape -D -w $(RES_TINY) -h $(RES_TINY) "$<" -o "$@"
 
 $(OUTDIR)/%_small.png: %.svg | $(OUTDIR)
-	inkscape -w $(RES_SMALL) -h $(RES_SMALL) "$<" -o "$@"
+	inkscape -D -w $(RES_SMALL) -h $(RES_SMALL) "$<" -o "$@"
 
 .PHONY: all
