Add a script to do an Inkscape export with specified max(W,H), since logos are defined in those terms. Add a "clean" target.

--- a/2D/logo/Makefile
+++ b/2D/logo/Makefile
@@ -6,14 +6,16 @@ SMALL_OUTPUTS := $(patsubst %.svg,$(OUTDIR)/%_small.png,$(wildcard *.svg))
 OUTPUTS := $(TINY_OUTPUTS) $(SMALL_OUTPUTS)
 
 all: $(OUTPUTS)
+clean:
+	rm -f $(OUTPUTS)
 
 $(OUTDIR):
 	mkdir -p $@
 
 $(OUTDIR)/%_tiny.png: %.svg | $(OUTDIR)
-	inkscape -D -w $(RES_TINY) -h $(RES_TINY) "$<" -o "$@"
+	python export.py "$<" $(RES_TINY) "$@"
 
 $(OUTDIR)/%_small.png: %.svg | $(OUTDIR)
-	inkscape -D -w $(RES_SMALL) -h $(RES_SMALL) "$<" -o "$@"
+	python export.py "$<" $(RES_SMALL) "$@"
 
-.PHONY: all
+.PHONY: all clean
