Add hackish dependency on the export script and Makefile themselves, until those can be finalized.

--- a/2D/logo/Makefile
+++ b/2D/logo/Makefile
@@ -12,10 +12,10 @@ clean:
 $(OUTDIR):
 	mkdir -p $@
 
-$(OUTDIR)/%_tiny.png: %.svg | $(OUTDIR)
+$(OUTDIR)/%_tiny.png: %.svg export.py Makefile | $(OUTDIR)
 	python export.py "$<" $(RES_TINY) "$@"
 
-$(OUTDIR)/%_small.png: %.svg | $(OUTDIR)
+$(OUTDIR)/%_small.png: %.svg export.py Makefile | $(OUTDIR)
 	python export.py "$<" $(RES_SMALL) "$@"
 
 .PHONY: all clean
