readded mkoflag.sh and opt logo/inkscape_export.py

--- a/2D/logo/Makefile
+++ b/2D/logo/Makefile
@@ -4,11 +4,13 @@ OUTPUTS := $(patsubst %.svg,$(OUTDIR)/%.webp,$(wildcard *.svg))
 OUTPUTS += $(patsubst %.xcf,$(OUTDIR)/%.webp,$(wildcard *.xcf))
 
 SHELL := /usr/bin/bash
-OFLAG := "-`./mkoflag.sh`"
 
 all: $(OUTPUTS)
 clean:
 	rm -f $(OUTPUTS)
+
+test:
+	./mkoflag.sh
 
 $(OUTDIR):
 	mkdir -p $@
@@ -17,7 +19,7 @@ $(OUTDIR)/%.webp: $(OUTDIR)/%.png
 	cwebp -z 9 "$<" -o "$@"
 
 $(OUTDIR)/%.png: %.svg export.py | $(OUTDIR)
-	python export.py "$<" $(RES) "$@" $(OFLAG)
+	python export.py "$<" $(RES) "$@" -`./mkoflag.sh`
 
 $(OUTDIR)/%.png: %.xcf logo_xcf2png.sh | $(OUTDIR)
 	sh logo_xcf2png.sh "$<" $(RES) "$@"
